crates/franken-engine/tests/snapshots/lowering_pipeline__if_else_statement.snap
---
source: crates/franken-engine/src/lowering_pipeline.rs
expression: actual_json
---
{
  "ir1": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir1",
      "source_hash": [
        119,
        82,
        223,
        70,
        89,
        233,
        228,
        61,
        17,
        178,
        84,
        151,
        143,
        116,
        182,
        54,
        235,
        140,
        174,
        52,
        22,
        21,
        105,
        90,
        33,
        186,
        43,
        83,
        170,
        94,
        176,
        152
      ],
      "source_label": "conditional.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": []
      }
    ],
    "ops": [
      {
        "LoadName": {
          "name": "x",
          "allow_missing": false
        }
      },
      {
        "LoadLiteral": {
          "value": {
            "Integer": 0
          }
        }
      },
      {
        "BinaryOp": {
          "operator": "GreaterThan"
        }
      },
      {
        "JumpIfFalsy": {
          "label_id": 0
        }
      },
      "Pop",
      {
        "LoadLiteral": {
          "value": {
            "String": "positive"
          }
        }
      },
      "Pop",
      {
        "Jump": {
          "label_id": 1
        }
      },
      {
        "Label": {
          "id": 0
        }
      },
      {
        "LoadLiteral": {
          "value": {
            "String": "non-positive"
          }
        }
      },
      "Pop",
      {
        "Label": {
          "id": 1
        }
      },
      "Return"
    ]
  },
  "ir2": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir2",
      "source_hash": [
        79,
        110,
        249,
        32,
        136,
        28,
        171,
        66,
        157,
        168,
        215,
        133,
        103,
        239,
        85,
        252,
        228,
        109,
        123,
        131,
        61,
        151,
        163,
        140,
        97,
        131,
        111,
        95,
        196,
        117,
        118,
        160
      ],
      "source_label": "conditional.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": []
      }
    ],
    "ops": [
      {
        "inner": {
          "LoadName": {
            "name": "x",
            "allow_missing": false
          }
        },
        "effect": "ReadEffect",
        "required_capability": null,
        "flow": {
          "data_label": "Internal",
          "sink_clearance": "Internal",
          "declassification_required": false
        }
      },
      {
        "inner": {
          "LoadLiteral": {
            "value": {
              "Integer": 0
            }
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "BinaryOp": {
            "operator": "GreaterThan"
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "JumpIfFalsy": {
            "label_id": 0
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Pop",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "LoadLiteral": {
            "value": {
              "String": "positive"
            }
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Pop",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "Jump": {
            "label_id": 1
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "Label": {
            "id": 0
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "LoadLiteral": {
            "value": {
              "String": "non-positive"
            }
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Pop",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "Label": {
            "id": 1
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Return",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      }
    ],
    "required_capabilities": []
  },
  "ir3": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir3",
      "source_hash": [
        68,
        130,
        179,
        109,
        182,
        33,
        146,
        0,
        175,
        28,
        29,
        115,
        36,
        197,
        34,
        9,
        59,
        230,
        46,
        4,
        24,
        116,
        100,
        80,
        22,
        205,
        6,
        218,
        203,
        201,
        181,
        67
      ],
      "source_label": "conditional.js"
    },
    "instructions": [
      {
        "LoadName": {
          "dst": 1,
          "name_pool_index": 0,
          "allow_missing": false
        }
      },
      {
        "LoadInt": {
          "dst": 2,
          "value": 0
        }
      },
      {
        "Gt": {
          "dst": 1,
          "lhs": 1,
          "rhs": 2
        }
      },
      {
        "JumpIf": {
          "cond": 1,
          "target": 5
        }
      },
      {
        "Jump": {
          "target": 9
        }
      },
      {
        "Move": {
          "dst": 0,
          "src": 1
        }
      },
      {
        "LoadStr": {
          "dst": 1,
          "pool_index": 1
        }
      },
      {
        "Move": {
          "dst": 0,
          "src": 1
        }
      },
      {
        "Jump": {
          "target": 11
        }
      },
      {
        "LoadStr": {
          "dst": 1,
          "pool_index": 2
        }
      },
      {
        "Move": {
          "dst": 0,
          "src": 1
        }
      },
      {
        "Return": {
          "value": 0
        }
      },
      "Halt"
    ],
    "constant_pool": [
      "x",
      "positive",
      "non-positive"
    ],
    "function_table": [
      {
        "entry": 0,
        "arity": 0,
        "frame_size": 3,
        "name": "main",
        "is_generator": false
      }
    ],
    "specialization": null,
    "required_capabilities": []
  },
  "ir2_flow_proof_artifact": {
    "schema_version": "frankenengine.ir2_flow_proof_witness.v1",
    "artifact_id": "sha256:dd5834665455d96c3d1edcb430b4e7fe8e281d68602edebf4ad707bffb7c8e4d",
    "trace_id": "golden_test_if_else_statement",
    "decision_id": "decision_if_else_statement",
    "policy_id": "policy_if_else_statement",
    "module_id": "conditional.js",
    "proved_flows": [
      {
        "op_index": 0,
        "source_label": "Internal",
        "sink_clearance": "Internal",
        "capability": null,
        "proof_method": "StaticAnalysis"
      }
    ],
    "denied_flows": [],
    "required_declassifications": [],
    "runtime_checkpoints": []
  },
  "witnesses": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:7752df4659e9e43d11b254978f74b636eb8cae341615695a21ba2b53aa5eb098",
      "output_hash": "sha256:4f6ef920881cab429da8d78567ef55fce46d7b833d97a38c61836f5fc47576a0",
      "rollback_token": "sha256:7752df4659e9e43d11b254978f74b636eb8cae341615695a21ba2b53aa5eb098",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR1 source_hash references IR0 hash"
        },
        {
          "name": "scope_binding_ids_unique",
          "passed": true,
          "detail": "All scope binding IDs are unique"
        }
      ]
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:4f6ef920881cab429da8d78567ef55fce46d7b833d97a38c61836f5fc47576a0",
      "output_hash": "sha256:4482b36db6219200af1c1d7324c522093be62e041874645016cd06dacbc9b543",
      "rollback_token": "sha256:4f6ef920881cab429da8d78567ef55fce46d7b833d97a38c61836f5fc47576a0",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR2 source_hash references IR1 hash"
        },
        {
          "name": "hostcall_capability_required",
          "passed": true,
          "detail": "Hostcall effects always carry capability tags"
        },
        {
          "name": "ir2_flow_metrics_consistent",
          "passed": true,
          "detail": "flow_ops=1 static_proven=1 runtime_checks=0"
        },
        {
          "name": "ir2_static_flow_coverage_ratio",
          "passed": true,
          "detail": "static_coverage_millionths=1000000 static_proven=1 total_flow_ops=1"
        }
      ]
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:4482b36db6219200af1c1d7324c522093be62e041874645016cd06dacbc9b543",
      "output_hash": "sha256:91a76ea3f64dd21e2c0d51a588982a41c77c22b46cc758e2ec7a8afcabd43c39",
      "rollback_token": "sha256:4482b36db6219200af1c1d7324c522093be62e041874645016cd06dacbc9b543",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR3 source_hash references IR2 hash"
        },
        {
          "name": "function_table_present",
          "passed": true,
          "detail": "IR3 function table contains a deterministic main entry"
        },
        {
          "name": "terminal_halt_instruction",
          "passed": true,
          "detail": "IR3 instruction stream ends with HALT"
        },
        {
          "name": "resolved_control_flow_targets",
          "passed": true,
          "detail": "IR3 jump targets resolve to concrete instruction indices"
        }
      ]
    }
  ],
  "isomorphism_ledger": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:7752df4659e9e43d11b254978f74b636eb8cae341615695a21ba2b53aa5eb098",
      "output_hash": "sha256:4f6ef920881cab429da8d78567ef55fce46d7b833d97a38c61836f5fc47576a0",
      "input_op_count": 1,
      "output_op_count": 13
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:4f6ef920881cab429da8d78567ef55fce46d7b833d97a38c61836f5fc47576a0",
      "output_hash": "sha256:4482b36db6219200af1c1d7324c522093be62e041874645016cd06dacbc9b543",
      "input_op_count": 13,
      "output_op_count": 13
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:4482b36db6219200af1c1d7324c522093be62e041874645016cd06dacbc9b543",
      "output_hash": "sha256:91a76ea3f64dd21e2c0d51a588982a41c77c22b46cc758e2ec7a8afcabd43c39",
      "input_op_count": 13,
      "output_op_count": 13
    }
  ],
  "events": [
    {
      "trace_id": "golden_test_if_else_statement",
      "decision_id": "decision_if_else_statement",
      "policy_id": "policy_if_else_statement",
      "component": "lowering_pipeline",
      "event": "ir0_to_ir1_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_if_else_statement",
      "decision_id": "decision_if_else_statement",
      "policy_id": "policy_if_else_statement",
      "component": "lowering_pipeline",
      "event": "ir1_to_ir2_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_if_else_statement",
      "decision_id": "decision_if_else_statement",
      "policy_id": "policy_if_else_statement",
      "component": "lowering_pipeline",
      "event": "ir2_flow_check_completed",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_if_else_statement",
      "decision_id": "decision_if_else_statement",
      "policy_id": "policy_if_else_statement",
      "component": "lowering_pipeline",
      "event": "ir2_to_ir3_lowered",
      "outcome": "pass",
      "error_code": null
    }
  ]
}
