crates/franken-engine/tests/snapshots/lowering_pipeline__numeric_literal.snap
---
source: crates/franken-engine/src/lowering_pipeline.rs
assertion_line: 37274
expression: actual_json
---
{
  "ir1": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 12,
        "patch": 0
      },
      "level": "Ir1",
      "source_hash": [
        108,
        132,
        2,
        125,
        204,
        29,
        203,
        75,
        11,
        242,
        67,
        150,
        97,
        190,
        182,
        37,
        103,
        160,
        209,
        59,
        227,
        16,
        228,
        66,
        21,
        169,
        80,
        21,
        146,
        14,
        14,
        229
      ],
      "source_label": "fixture.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": []
      }
    ],
    "ops": [
      {
        "LoadLiteral": {
          "value": {
            "Integer": 42
          }
        }
      },
      "Pop",
      "Return"
    ]
  },
  "ir2": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 12,
        "patch": 0
      },
      "level": "Ir2",
      "source_hash": [
        250,
        238,
        37,
        95,
        188,
        69,
        228,
        69,
        192,
        167,
        150,
        81,
        222,
        147,
        36,
        47,
        243,
        116,
        184,
        224,
        166,
        65,
        143,
        11,
        2,
        222,
        237,
        8,
        22,
        185,
        161,
        141
      ],
      "source_label": "fixture.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": []
      }
    ],
    "ops": [
      {
        "inner": {
          "LoadLiteral": {
            "value": {
              "Integer": 42
            }
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Pop",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Return",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      }
    ],
    "required_capabilities": []
  },
  "ir3": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 12,
        "patch": 0
      },
      "level": "Ir3",
      "source_hash": [
        205,
        14,
        191,
        233,
        169,
        175,
        35,
        54,
        72,
        89,
        168,
        202,
        22,
        171,
        162,
        250,
        124,
        83,
        231,
        25,
        155,
        46,
        49,
        41,
        205,
        130,
        132,
        245,
        133,
        104,
        8,
        175
      ],
      "source_label": "fixture.js"
    },
    "instructions": [
      {
        "LoadInt": {
          "dst": 1,
          "value": 42
        }
      },
      {
        "Move": {
          "dst": 0,
          "src": 1
        }
      },
      {
        "Return": {
          "value": 0
        }
      },
      "Halt"
    ],
    "constant_pool": [],
    "function_table": [
      {
        "entry": 0,
        "arity": 0,
        "frame_size": 2,
        "name": "main",
        "is_generator": false
      }
    ],
    "specialization": null,
    "required_capabilities": []
  },
  "ir2_flow_proof_artifact": {
    "schema_version": "frankenengine.ir2_flow_proof_witness.v1",
    "artifact_id": "sha256:4d4a4ed2635e02ab4a2071644e3a06d18796730c466d5c769aa3d057b2599e3d",
    "trace_id": "golden_test_numeric_literal",
    "decision_id": "decision_numeric_literal",
    "policy_id": "policy_numeric_literal",
    "module_id": "fixture.js",
    "proved_flows": [],
    "denied_flows": [],
    "required_declassifications": [],
    "runtime_checkpoints": []
  },
  "witnesses": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:6c84027dcc1dcb4b0bf2439661beb62567a0d13be310e44215a95015920e0ee5",
      "output_hash": "sha256:faee255fbc45e445c0a79651de93242ff374b8e0a6418f0b02deed0816b9a18d",
      "rollback_token": "sha256:6c84027dcc1dcb4b0bf2439661beb62567a0d13be310e44215a95015920e0ee5",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR1 source_hash references IR0 hash"
        },
        {
          "name": "scope_binding_ids_unique",
          "passed": true,
          "detail": "All scope binding IDs are unique"
        }
      ]
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:faee255fbc45e445c0a79651de93242ff374b8e0a6418f0b02deed0816b9a18d",
      "output_hash": "sha256:cd0ebfe9a9af23364859a8ca16aba2fa7c53e7199b2e3129cd8284f5856808af",
      "rollback_token": "sha256:faee255fbc45e445c0a79651de93242ff374b8e0a6418f0b02deed0816b9a18d",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR2 source_hash references IR1 hash"
        },
        {
          "name": "hostcall_capability_required",
          "passed": true,
          "detail": "Hostcall effects always carry capability tags"
        },
        {
          "name": "ir2_flow_metrics_consistent",
          "passed": true,
          "detail": "flow_ops=0 static_proven=0 runtime_checks=0"
        },
        {
          "name": "ir2_static_flow_coverage_ratio",
          "passed": true,
          "detail": "static_coverage_millionths=0 static_proven=0 total_flow_ops=0"
        }
      ]
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:cd0ebfe9a9af23364859a8ca16aba2fa7c53e7199b2e3129cd8284f5856808af",
      "output_hash": "sha256:a8dc2ae053b5aaff384d57e086afced0bcc1e55f3a0a8ca5fb1e97d18c197816",
      "rollback_token": "sha256:cd0ebfe9a9af23364859a8ca16aba2fa7c53e7199b2e3129cd8284f5856808af",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR3 source_hash references IR2 hash"
        },
        {
          "name": "function_table_present",
          "passed": true,
          "detail": "IR3 function table contains a deterministic main entry"
        },
        {
          "name": "terminal_halt_instruction",
          "passed": true,
          "detail": "IR3 instruction stream ends with HALT"
        },
        {
          "name": "resolved_control_flow_targets",
          "passed": true,
          "detail": "IR3 jump targets resolve to concrete instruction indices"
        }
      ]
    }
  ],
  "isomorphism_ledger": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:6c84027dcc1dcb4b0bf2439661beb62567a0d13be310e44215a95015920e0ee5",
      "output_hash": "sha256:faee255fbc45e445c0a79651de93242ff374b8e0a6418f0b02deed0816b9a18d",
      "input_op_count": 1,
      "output_op_count": 3
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:faee255fbc45e445c0a79651de93242ff374b8e0a6418f0b02deed0816b9a18d",
      "output_hash": "sha256:cd0ebfe9a9af23364859a8ca16aba2fa7c53e7199b2e3129cd8284f5856808af",
      "input_op_count": 3,
      "output_op_count": 3
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:cd0ebfe9a9af23364859a8ca16aba2fa7c53e7199b2e3129cd8284f5856808af",
      "output_hash": "sha256:a8dc2ae053b5aaff384d57e086afced0bcc1e55f3a0a8ca5fb1e97d18c197816",
      "input_op_count": 3,
      "output_op_count": 4
    }
  ],
  "events": [
    {
      "trace_id": "golden_test_numeric_literal",
      "decision_id": "decision_numeric_literal",
      "policy_id": "policy_numeric_literal",
      "component": "lowering_pipeline",
      "event": "ir0_to_ir1_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_numeric_literal",
      "decision_id": "decision_numeric_literal",
      "policy_id": "policy_numeric_literal",
      "component": "lowering_pipeline",
      "event": "ir1_to_ir2_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_numeric_literal",
      "decision_id": "decision_numeric_literal",
      "policy_id": "policy_numeric_literal",
      "component": "lowering_pipeline",
      "event": "ir2_flow_check_completed",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_numeric_literal",
      "decision_id": "decision_numeric_literal",
      "policy_id": "policy_numeric_literal",
      "component": "lowering_pipeline",
      "event": "ir2_to_ir3_lowered",
      "outcome": "pass",
      "error_code": null
    }
  ]
}
