crates/franken-engine/tests/snapshots/lowering_pipeline__variable_declarations.snap
---
source: crates/franken-engine/src/lowering_pipeline.rs
expression: actual_json
---
{
  "ir1": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir1",
      "source_hash": [
        249,
        183,
        129,
        201,
        243,
        85,
        200,
        162,
        46,
        101,
        92,
        231,
        223,
        76,
        254,
        29,
        204,
        1,
        182,
        111,
        40,
        247,
        105,
        227,
        180,
        247,
        88,
        255,
        166,
        164,
        138,
        89
      ],
      "source_label": "variables.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": [
          {
            "name": "x",
            "binding_id": 0,
            "scope": {
              "depth": 0,
              "index": 0
            },
            "kind": "Let"
          },
          {
            "name": "message",
            "binding_id": 1,
            "scope": {
              "depth": 0,
              "index": 0
            },
            "kind": "Const"
          }
        ]
      }
    ],
    "ops": [
      {
        "LoadLiteral": {
          "value": {
            "Integer": 10
          }
        }
      },
      {
        "StoreBinding": {
          "binding_id": 0
        }
      },
      "Discard",
      {
        "LoadLiteral": {
          "value": {
            "String": "Hello, world!"
          }
        }
      },
      {
        "StoreBinding": {
          "binding_id": 1
        }
      },
      "Discard",
      "Return"
    ]
  },
  "ir2": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir2",
      "source_hash": [
        87,
        203,
        179,
        164,
        59,
        241,
        106,
        59,
        90,
        44,
        223,
        204,
        46,
        25,
        163,
        98,
        169,
        252,
        25,
        78,
        36,
        111,
        226,
        19,
        84,
        93,
        238,
        103,
        152,
        228,
        194,
        37
      ],
      "source_label": "variables.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": [
          {
            "name": "x",
            "binding_id": 0,
            "scope": {
              "depth": 0,
              "index": 0
            },
            "kind": "Let"
          },
          {
            "name": "message",
            "binding_id": 1,
            "scope": {
              "depth": 0,
              "index": 0
            },
            "kind": "Const"
          }
        ]
      }
    ],
    "ops": [
      {
        "inner": {
          "LoadLiteral": {
            "value": {
              "Integer": 10
            }
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "StoreBinding": {
            "binding_id": 0
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Discard",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "LoadLiteral": {
            "value": {
              "String": "Hello, world!"
            }
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "StoreBinding": {
            "binding_id": 1
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Discard",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Return",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      }
    ],
    "required_capabilities": []
  },
  "ir3": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir3",
      "source_hash": [
        150,
        105,
        201,
        197,
        28,
        184,
        236,
        28,
        112,
        97,
        166,
        103,
        105,
        129,
        113,
        78,
        12,
        18,
        90,
        229,
        202,
        103,
        43,
        219,
        38,
        249,
        96,
        192,
        100,
        113,
        81,
        88
      ],
      "source_label": "variables.js"
    },
    "instructions": [
      {
        "LoadInt": {
          "dst": 3,
          "value": 10
        }
      },
      {
        "Move": {
          "dst": 1,
          "src": 3
        }
      },
      {
        "LoadStr": {
          "dst": 3,
          "pool_index": 0
        }
      },
      {
        "Move": {
          "dst": 2,
          "src": 3
        }
      },
      {
        "Return": {
          "value": 0
        }
      },
      "Halt"
    ],
    "constant_pool": [
      "Hello, world!"
    ],
    "function_table": [
      {
        "entry": 0,
        "arity": 0,
        "frame_size": 4,
        "name": "main",
        "is_generator": false
      }
    ],
    "specialization": null,
    "required_capabilities": []
  },
  "ir2_flow_proof_artifact": {
    "schema_version": "frankenengine.ir2_flow_proof_witness.v1",
    "artifact_id": "sha256:e5a0fb5d04f8d2fe57e3846fd9fde9cd19469874eba840a63a452bbe2e9d52da",
    "trace_id": "golden_test_variable_declarations",
    "decision_id": "decision_variable_declarations",
    "policy_id": "policy_variable_declarations",
    "module_id": "variables.js",
    "proved_flows": [],
    "denied_flows": [],
    "required_declassifications": [],
    "runtime_checkpoints": []
  },
  "witnesses": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:f9b781c9f355c8a22e655ce7df4cfe1dcc01b66f28f769e3b4f758ffa6a48a59",
      "output_hash": "sha256:57cbb3a43bf16a3b5a2cdfcc2e19a362a9fc194e246fe213545dee6798e4c225",
      "rollback_token": "sha256:f9b781c9f355c8a22e655ce7df4cfe1dcc01b66f28f769e3b4f758ffa6a48a59",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR1 source_hash references IR0 hash"
        },
        {
          "name": "scope_binding_ids_unique",
          "passed": true,
          "detail": "All scope binding IDs are unique"
        }
      ]
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:57cbb3a43bf16a3b5a2cdfcc2e19a362a9fc194e246fe213545dee6798e4c225",
      "output_hash": "sha256:9669c9c51cb8ec1c7061a6676981714e0c125ae5ca672bdb26f960c064715158",
      "rollback_token": "sha256:57cbb3a43bf16a3b5a2cdfcc2e19a362a9fc194e246fe213545dee6798e4c225",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR2 source_hash references IR1 hash"
        },
        {
          "name": "hostcall_capability_required",
          "passed": true,
          "detail": "Hostcall effects always carry capability tags"
        },
        {
          "name": "ir2_flow_metrics_consistent",
          "passed": true,
          "detail": "flow_ops=0 static_proven=0 runtime_checks=0"
        },
        {
          "name": "ir2_static_flow_coverage_ratio",
          "passed": true,
          "detail": "static_coverage_millionths=0 static_proven=0 total_flow_ops=0"
        }
      ]
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:9669c9c51cb8ec1c7061a6676981714e0c125ae5ca672bdb26f960c064715158",
      "output_hash": "sha256:876c8fdb359d9833ed4d89733ff17cef6e588d1fe93483becf902e243bab46a0",
      "rollback_token": "sha256:9669c9c51cb8ec1c7061a6676981714e0c125ae5ca672bdb26f960c064715158",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR3 source_hash references IR2 hash"
        },
        {
          "name": "function_table_present",
          "passed": true,
          "detail": "IR3 function table contains a deterministic main entry"
        },
        {
          "name": "terminal_halt_instruction",
          "passed": true,
          "detail": "IR3 instruction stream ends with HALT"
        },
        {
          "name": "resolved_control_flow_targets",
          "passed": true,
          "detail": "IR3 jump targets resolve to concrete instruction indices"
        }
      ]
    }
  ],
  "isomorphism_ledger": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:f9b781c9f355c8a22e655ce7df4cfe1dcc01b66f28f769e3b4f758ffa6a48a59",
      "output_hash": "sha256:57cbb3a43bf16a3b5a2cdfcc2e19a362a9fc194e246fe213545dee6798e4c225",
      "input_op_count": 2,
      "output_op_count": 7
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:57cbb3a43bf16a3b5a2cdfcc2e19a362a9fc194e246fe213545dee6798e4c225",
      "output_hash": "sha256:9669c9c51cb8ec1c7061a6676981714e0c125ae5ca672bdb26f960c064715158",
      "input_op_count": 7,
      "output_op_count": 7
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:9669c9c51cb8ec1c7061a6676981714e0c125ae5ca672bdb26f960c064715158",
      "output_hash": "sha256:876c8fdb359d9833ed4d89733ff17cef6e588d1fe93483becf902e243bab46a0",
      "input_op_count": 7,
      "output_op_count": 6
    }
  ],
  "events": [
    {
      "trace_id": "golden_test_variable_declarations",
      "decision_id": "decision_variable_declarations",
      "policy_id": "policy_variable_declarations",
      "component": "lowering_pipeline",
      "event": "ir0_to_ir1_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_variable_declarations",
      "decision_id": "decision_variable_declarations",
      "policy_id": "policy_variable_declarations",
      "component": "lowering_pipeline",
      "event": "ir1_to_ir2_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_variable_declarations",
      "decision_id": "decision_variable_declarations",
      "policy_id": "policy_variable_declarations",
      "component": "lowering_pipeline",
      "event": "ir2_flow_check_completed",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_variable_declarations",
      "decision_id": "decision_variable_declarations",
      "policy_id": "policy_variable_declarations",
      "component": "lowering_pipeline",
      "event": "ir2_to_ir3_lowered",
      "outcome": "pass",
      "error_code": null
    }
  ]
}
